# leetcode-solves

./: README.md  pyproject.toml
docs/: problem0001.md  problem0002.md  problem0003.md  problem0006.md  problem0013.md  problem0020.md  problem1.md  problem2.md  problem3.md
src/: problem0003.py  problem0006.py  problem0017.py  problem1.py  problem13.py  problem2.py  problem20.py  problem3.py
